--- a/index.html
+++ b/index.html
@@ -1,12 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js"
+      integrity="sha512-RXf+QSDCUQs5uwRKaDoXt55jygZZm2V++WUZduaU/Ui/9EGp3f/2KZVahFZBKGH0s774sd3HmrhUy+SgOFQLVQ=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
+    <title>Responsive-Football</title>
+  </head>
+  <body>
+    <!-- header -->
+    <header>
+      <div class="navbar container">
+        <div class="navbar-item">
+          <a href=" ">Home</a>
+          <a href=" ">Clubs</a>
+          <a href=" ">World Cup 2023</a>
+          <a href=" ">Upcoming Matches</a>
+          <a href=" ">Contact</a>
+        </div>
+        <div class="navbar-item navbar-login">
+          <img class="login-img" src="images/Social Icons/login.png" alt="" />
+          <a class="login-link" href="#">Login</a>
+        </div>
+      </div>
+    </header>
+    <main>
+      <!-- conmebol banner section  -->
+      <section class="conmebol-section">
+        <div class="conmebol-banner">
+          <div class="first-half">
+            <h1>Conmebol<br />Copa America<br />2021</h1>
+            <div class="watch-live-btn">
+              <a href="">Watch Live</a>
+              <i class="fas fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="banner-img">
+            <img src="images/banner.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- player section -->
+      <section>
+        <div class="copa-players">
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </body>
 </html>
