--- a/index.html
+++ b/index.html
@@ -47,117 +47,176 @@
         </div>
       </section>
       <!-- player section -->
-      <section>
+      <section class="player-section">
         <div class="copa-players">
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-1.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Neymar Jr</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
             </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-2.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Lionel Messi</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-3.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Cristiano Ronaldo</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-4.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Paulo Dybala</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-5.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Mesut Ozil</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-6.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Mauro Icardi</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-7.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Di Maria</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-8.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Kylian Mbappé</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-9.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Mohammed Salah</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-10.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Harry Kane</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-11.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Kevin De Bruyne</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
+            </div>
+            <div class="player">
+              <div class="player-img">
+                <img src="images/players/player-12.png" alt="" />
+              </div>
+              <div class="player-details">
+                <h3>Philippe Coutinho</h3>
+                <p>
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Nobis culpa neque accusantium necessitatibus, quaerat
+                  suscipit?
+                </p>
+              </div>
             </div>
           </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
+          <!------------- highlights --------------------->
+          <div class="highlights">
+              <div class="all-highlights">
+                  <h1>All Highlights<br>Copa America 2021</h1>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsum quisquam ratione vitae mollitia! Eos reiciendis recusandae facere, velit asperiores molestias dolor vero reprehenderit ad!</p>
+                  <div class="watch-live-btn">
+                    <a href="">Watch Now</a>
+                    <i class="fas fa-arrow-right"></i>
+                  </div>
+              </div>
           </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-          <div class="player">
-            <div class="player-img">
-              <img src="images/players/player-1.png" alt="" />
-            </div>
-            <div class="player-details">
-              <h3>Neymar Jr</h3>
-              <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nobis culpa neque accusantium necessitatibus, quaerat suscipit?</p>
-            </div>
-          </div>
-        </div>
       </section>
     </main>
   </body>
