--- a/index.html
+++ b/index.html
@@ -216,8 +216,25 @@
                     <i class="fas fa-arrow-right"></i>
                   </div>
               </div>
+              <div class="match-img">
+                  <img src="images/match.png" alt="">
+              </div>
           </div>
       </section>
     </main>
+    <footer>
+        <div class="main-footer">
+            <div class="footer-logo">
+                <img src="images/Logo.png" alt="">
+            </div>
+            <div class="footer-icon">
+                <img src="images/Social Icons/Instagram.png" alt="">
+                <img src="images/Social Icons/Dribbble.png" alt="">
+                <img src="images/Social Icons/Twitter.png" alt="">
+                <img src="images/Social Icons/Youtube.png" alt="">
+            </div>
+            <p>Copyright &copy; 2022 Football</p>
+        </div>
+    </footer>
   </body>
 </html>
