--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href=" ">Contact</a>
         </div>
         <div class="navbar-item navbar-login">
-          <img class="login-img" src="images/Social Icons/login.png" alt="" />
+          <p><i class="fas fa-sign-in-alt"></i> </p>
           <a class="login-link" href="#">Login</a>
         </div>
       </div>
@@ -55,11 +55,7 @@
               </div>
               <div class="player-details">
                 <h3>Neymar Jr</h3>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
-                </p>
+                <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer.He is widely regarded as one of the best players.</p>
               </div>
             </div>
             <div class="player">
@@ -68,11 +64,7 @@
               </div>
               <div class="player-details">
                 <h3>Lionel Messi</h3>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
-                </p>
+                <p>Lionel Andrés Messi is an Argentine footballer who plays as a forward or an attacking midfielder andcaptains the Argentina national team</p>
               </div>
             </div>
             <div class="player">
@@ -81,11 +73,7 @@
               </div>
               <div class="player-details">
                 <h3>Cristiano Ronaldo</h3>
-                <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
-                </p>
+                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains</p>
               </div>
             </div>
             <div class="player">
@@ -95,9 +83,7 @@
               <div class="player-details">
                 <h3>Paulo Dybala</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Paulo Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team
                 </p>
               </div>
             </div>
@@ -108,9 +94,7 @@
               <div class="player-details">
                 <h3>Mesut Ozil</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Mesut Özil is a German footballer who plays as an attacking midfielder for Süper Lig club.He has also played as a wide midfielder in his career
                 </p>
               </div>
             </div>
@@ -121,9 +105,7 @@
               <div class="player-details">
                 <h3>Mauro Icardi</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain 
                 </p>
               </div>
             </div>
@@ -134,9 +116,7 @@
               <div class="player-details">
                 <h3>Di Maria</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.
                 </p>
               </div>
             </div>
@@ -147,9 +127,7 @@
               <div class="player-details">
                 <h3>Kylian Mbappé</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Kylian Mbappé Lottin is a French footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team
                 </p>
               </div>
             </div>
@@ -160,9 +138,7 @@
               <div class="player-details">
                 <h3>Mohammed Salah</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Mohamed Salah is an Egyptian footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team
                 </p>
               </div>
             </div>
@@ -173,9 +149,7 @@
               <div class="player-details">
                 <h3>Harry Kane</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Harry Kane is an English footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team
                 </p>
               </div>
             </div>
@@ -186,9 +160,7 @@
               <div class="player-details">
                 <h3>Kevin De Bruyne</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City
                 </p>
               </div>
             </div>
@@ -199,9 +171,7 @@
               <div class="player-details">
                 <h3>Philippe Coutinho</h3>
                 <p>
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Nobis culpa neque accusantium necessitatibus, quaerat
-                  suscipit?
+                  Philippe Coutinho is a Brazilian footballer who plays as an attacking midfielder for Spanish club Barcelona.
                 </p>
               </div>
             </div>
@@ -210,7 +180,7 @@
           <div class="highlights">
               <div class="all-highlights">
                   <h1>All Highlights<br>Copa America 2021</h1>
-                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cumque ipsum quisquam ratione vitae mollitia! Eos reiciendis recusandae facere, velit asperiores molestias dolor vero reprehenderit ad!</p>
+                  <p>Copa América or CONMEBOL Copa América, known until 1975 as the South American Football Championship, is the main men's football tournament contested among national teams from South America</p>
                   <div class="watch-live-btn">
                     <a href="">Watch Now</a>
                     <i class="fas fa-arrow-right"></i>
@@ -228,10 +198,18 @@
                 <img src="images/Logo.png" alt="">
             </div>
             <div class="footer-icon">
-                <img src="images/Social Icons/Instagram.png" alt="">
-                <img src="images/Social Icons/Dribbble.png" alt="">
-                <img src="images/Social Icons/Twitter.png" alt="">
-                <img src="images/Social Icons/Youtube.png" alt="">
+              <div class="icon">
+                <p><i class="fab fa-instagram"></i></p>
+              </div>
+                <div class="icon">
+                  <p><i class="fab fa-dribbble"></i></p>
+                </div>
+                <div class="icon">
+                  <p><i class="fab fa-twitter"></i></p>
+                </div>
+                <div class="icon">
+                  <p><i class="fab fa-youtube"></i></p>
+                </div>
             </div>
             <p>Copyright &copy; 2022 Football</p>
         </div>
