--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <title>Responsive-Football</title>
   </head>
   <body>
-    <!-- header -->
+    <!--------------------------------- header ---------------------------------->
     <header>
       <div class="navbar container">
         <div class="navbar-item">
@@ -36,7 +36,7 @@
         <div class="conmebol-banner">
           <div class="first-half">
             <h1>Conmebol<br />Copa America<br />2021</h1>
-            <div class="watch-live-btn">
+            <div class="watch-btn">
               <a href="">Watch Live</a>
               <i class="fas fa-arrow-right"></i>
             </div>
@@ -46,7 +46,7 @@
           </div>
         </div>
       </section>
-      <!-- player section -->
+      <!------------------------ player section -------------------------->
       <section class="player-section">
         <div class="copa-players">
             <div class="player">
@@ -176,12 +176,12 @@
               </div>
             </div>
           </div>
-          <!------------- highlights --------------------->
+          <!------------------------ highlights -------------------------------->
           <div class="highlights">
-              <div class="all-highlights">
+              <div class="all-highlights-part">
                   <h1>All Highlights<br>Copa America 2021</h1>
                   <p>Copa América or CONMEBOL Copa América, known until 1975 as the South American Football Championship, is the main men's football tournament contested among national teams from South America</p>
-                  <div class="watch-live-btn">
+                  <div class="watch-btn">
                     <a href="">Watch Now</a>
                     <i class="fas fa-arrow-right"></i>
                   </div>
@@ -192,6 +192,7 @@
           </div>
       </section>
     </main>
+    <!-- --------------------------------footer ---------------------------------->
     <footer>
         <div class="main-footer">
             <div class="footer-logo">
