--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <a href=" ">Contact</a>
         </div>
         <div class="navbar-item navbar-login">
-          <p><i class="fas fa-sign-in-alt"></i> </p>
+          <p><i class="fas fa-sign-in-alt"></i></p>
           <a class="login-link" href="#">Login</a>
         </div>
       </div>
@@ -49,171 +49,240 @@
       <!------------------------ player section -------------------------->
       <section class="player-section">
         <div class="copa-players">
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-1.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Neymar Jr</h3>
-                <p>Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian professional footballer.He is widely regarded as one of the best players.</p>
-              </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-1.png" alt="" />
             </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-2.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Lionel Messi</h3>
-                <p>Lionel Andrés Messi is an Argentine footballer who plays as a forward or an attacking midfielder andcaptains the Argentina national team</p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-3.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Cristiano Ronaldo</h3>
-                <p>Cristiano Ronaldo is a Portuguese professional footballer who plays as a forward for Serie A club Juventus and captains</p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-4.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Paulo Dybala</h3>
-                <p>
-                  Paulo Dybala is an Argentine professional footballer who plays as a forward for Serie A club Juventus and the Argentina national team
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-5.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Mesut Ozil</h3>
-                <p>
-                  Mesut Özil is a German footballer who plays as an attacking midfielder for Süper Lig club.He has also played as a wide midfielder in his career
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-6.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Mauro Icardi</h3>
-                <p>
-                  Mauro Emanuel Icardi is an Argentine professional footballer who plays as a striker for Ligue 1 club Paris Saint-Germain 
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-7.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Di Maria</h3>
-                <p>
-                  Di María is an Argentine professional footballer who plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-8.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Kylian Mbappé</h3>
-                <p>
-                  Kylian Mbappé Lottin is a French footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and the France national team
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-9.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Mohammed Salah</h3>
-                <p>
-                  Mohamed Salah is an Egyptian footballer who plays as a forward for Premier League club Liverpool and captains the Egypt national team
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-10.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Harry Kane</h3>
-                <p>
-                  Harry Kane is an English footballer who plays as a striker for Premier League club Tottenham Hotspur and captains the England national team
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-11.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Kevin De Bruyne</h3>
-                <p>
-                  Kevin De Bruyne is a Belgian professional footballer who plays as a midfielder for Premier League club Manchester City
-                </p>
-              </div>
-            </div>
-            <div class="player">
-              <div class="player-img">
-                <img src="images/players/player-12.png" alt="" />
-              </div>
-              <div class="player-details">
-                <h3>Philippe Coutinho</h3>
-                <p>
-                  Philippe Coutinho is a Brazilian footballer who plays as an attacking midfielder for Spanish club Barcelona.
-                </p>
-              </div>
+            <div class="player-details">
+              <h3>Neymar Jr</h3>
+              <p>
+                Neymar da Silva Santos Júnior, known as Neymar, is a Brazilian
+                professional footballer.He is widely regarded as one of the best
+                players.
+              </p>
             </div>
           </div>
-          <!------------------------ highlights -------------------------------->
-          <div class="highlights">
-              <div class="all-highlights-part">
-                  <h1>All Highlights<br>Copa America 2021</h1>
-                  <p>Copa América or CONMEBOL Copa América, known until 1975 as the South American Football Championship, is the main men's football tournament contested among national teams from South America</p>
-                  <div class="watch-btn">
-                    <a href="">Watch Now</a>
-                    <i class="fas fa-arrow-right"></i>
-                  </div>
-              </div>
-              <div class="match-img">
-                  <img src="images/match.png" alt="">
-              </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-2.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Lionel Messi</h3>
+              <p>
+                Lionel Andrés Messi is an Argentine footballer who plays as a
+                forward or an attacking midfielder andcaptains the Argentina
+                national team
+              </p>
+            </div>
           </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-3.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Cristiano Ronaldo</h3>
+              <p>
+                Cristiano Ronaldo is a Portuguese professional footballer who
+                plays as a forward for Serie A club Juventus and captains
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-4.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Paulo Dybala</h3>
+              <p>
+                Paulo Dybala is an Argentine professional footballer who plays
+                as a forward for Serie A club Juventus and the Argentina
+                national team
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-5.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Mesut Ozil</h3>
+              <p>
+                Mesut Özil is a German footballer who plays as an attacking
+                midfielder for Süper Lig club.He has also played as a wide
+                midfielder in his career
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-6.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Mauro Icardi</h3>
+              <p>
+                Mauro Emanuel Icardi is an Argentine professional footballer who
+                plays as a striker for Ligue 1 club Paris Saint-Germain
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-7.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Di Maria</h3>
+              <p>
+                Di María is an Argentine professional footballer who plays for
+                Ligue 1 club Paris Saint-Germain and the Argentina national
+                team.
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-8.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Kylian Mbappé</h3>
+              <p>
+                Kylian Mbappé Lottin is a French footballer who plays as a
+                forward for Ligue 1 club Paris Saint-Germain and the France
+                national team
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-9.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Mohammed Salah</h3>
+              <p>
+                Mohamed Salah is an Egyptian footballer who plays as a forward
+                for Premier League club Liverpool and captains the Egypt
+                national team
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-10.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Harry Kane</h3>
+              <p>
+                Harry Kane is an English footballer who plays as a striker for
+                Premier League club Tottenham Hotspur and captains the England
+                national team
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-11.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Kevin De Bruyne</h3>
+              <p>
+                Kevin De Bruyne is a Belgian professional footballer who plays
+                as a midfielder for Premier League club Manchester City
+              </p>
+            </div>
+          </div>
+          <div class="player">
+            <div class="player-img">
+              <img src="images/players/player-12.png" alt="" />
+            </div>
+            <div class="player-details">
+              <h3>Philippe Coutinho</h3>
+              <p>
+                Philippe Coutinho is a Brazilian footballer who plays as an
+                attacking midfielder for Spanish club Barcelona.
+              </p>
+            </div>
+          </div>
+        </div>
+        <!------------------------ highlights -------------------------------->
+        <div class="highlights">
+          <div class="all-highlights-part">
+            <h1>All Highlights<br />Copa America 2021</h1>
+            <p>
+              Copa América or CONMEBOL Copa América, known until 1975 as the
+              South American Football Championship, is the main men's football
+              tournament contested among national teams from South America
+            </p>
+            <div class="watch-btn">
+              <a href="">Watch Now</a>
+              <i class="fas fa-arrow-right"></i>
+            </div>
+          </div>
+          <div class="match-img">
+            <img src="images/match.png" alt="" />
+          </div>
+        </div>
+      </section>
+      <!-- -------------------news & events------------------------ -->
+      <section class="news-section">
+        <div class="news-events">
+          <h1 class="news-heading">News & Events</h1>
+          <div class="news">
+            <div class="news-img">
+              <img src="images/news/news-1.jpg" alt="" />
+            </div>
+            <div class="news-info">
+              <h3>
+                Mikel Arteta provides firm update on future of Emile Smith Rowe
+              </h3>
+              <p>By <span class="news-author">Danny Sapio</span></p>
+            </div>
+          </div>
+          <div class="news">
+            <div class="news-img">
+              <img src="images/news/news-2.jpg" alt="" />
+            </div>
+            <div class="news-info">
+              <h3>
+                Rumour Has It: Chelsea release funds to secure £150m Haaland deal
+              </h3>
+              <p>By <span class="news-author">Jeremiah Lam</span></p>
+            </div>
+          </div>
+          <div class="news">
+            <div class="news-img">
+              <img src="images/news/news-3.png" alt="" />
+            </div>
+            <div class="news-info">
+              <h3>
+                Klopp says Liverpool's injured defensive quartet 'look really good'
+              </h3>
+              <p>By <span class="news-author">Tess Gadd</span></p>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
     <!-- --------------------------------footer ---------------------------------->
     <footer>
-        <div class="main-footer">
-            <div class="footer-logo">
-                <img src="images/Logo.png" alt="">
-            </div>
-            <div class="footer-icon">
-              <div class="icon">
-                <p><i class="fab fa-instagram"></i></p>
-              </div>
-                <div class="icon">
-                  <p><i class="fab fa-dribbble"></i></p>
-                </div>
-                <div class="icon">
-                  <p><i class="fab fa-twitter"></i></p>
-                </div>
-                <div class="icon">
-                  <p><i class="fab fa-youtube"></i></p>
-                </div>
-            </div>
-            <p>Copyright &copy; 2022 Football</p>
+      <div class="main-footer">
+        <div class="footer-logo">
+          <img src="images/Logo.png" alt="" />
         </div>
+        <div class="footer-icon">
+          <div class="icon">
+            <p><i class="fab fa-instagram"></i></p>
+          </div>
+          <div class="icon">
+            <p><i class="fab fa-dribbble"></i></p>
+          </div>
+          <div class="icon">
+            <p><i class="fab fa-twitter"></i></p>
+          </div>
+          <div class="icon">
+            <p><i class="fab fa-youtube"></i></p>
+          </div>
+        </div>
+        <p>Copyright &copy; 2022 Football</p>
+      </div>
     </footer>
   </body>
 </html>
